atualização - problemas no banco em memória