@@ -1,12 +1,10 @@
 package com.sea.sistemy.app.user.model;  
 
-
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
+import java.util.UUID;
 
 import javax.persistence.Entity;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
 import javax.persistence.Id;
 import javax.persistence.Table;
 
@@ -16,21 +14,17 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import com.sea.sistemy.app.user.DTO.UserRole;
 
-import lombok.AllArgsConstructor;
 import lombok.EqualsAndHashCode;
-import lombok.Getter;
-import lombok.NoArgsConstructor;  
 
 @Table(name = "users")
 @Entity(name = "users")
-@Getter
-@NoArgsConstructor
-@AllArgsConstructor
 @EqualsAndHashCode(of = "id")
 public class User implements UserDetails {
-    @Id
-    @GeneratedValue(strategy = GenerationType.UUID)
-    private String id;
+	
+	private static final long serialVersionUID = 1L;
+	@Id
+    //@GeneratedValue(strategy = GenerationType.AUTO)
+    private String id = UUID.randomUUID().toString();
     private String login;
     private String password;
     private UserRole role;
@@ -43,9 +37,14 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        if(this.role == UserRole.ADMIN) 
-        	return List.of(new SimpleGrantedAuthority("ROLE_ADMIN"), new SimpleGrantedAuthority("ROLE_USER"));
-        else return List.of(new SimpleGrantedAuthority("ROLE_USER"));
+        if (this.role == UserRole.ADMIN) {
+            return Arrays.asList(
+                new SimpleGrantedAuthority("ROLE_ADMIN"),
+                new SimpleGrantedAuthority("ROLE_USER")
+            );
+        } else {
+            return Arrays.asList(new SimpleGrantedAuthority("ROLE_USER"));
+        }
     }
 
     @Override
@@ -72,7 +71,52 @@ public class User implements UserDetails {
     public boolean isEnabled() {
         return true;
     }
-}    
+    
+    @Override
+    public String getPassword() {
+        return password;
+    }
+    public String getId() {
+		// TODO Auto-generated method stub
+		return id;
+	}
+    
+    public User ( ) {
+    	
+    }
+
+	public String getLogin() {
+		return login;
+	}
+
+	public void setLogin(String login) {
+		this.login = login;
+	}
+
+	public UserRole getRole() {
+		return role;
+	}
+
+	public void setRole(UserRole role) {
+		this.role = role;
+	}
+	
+	public void setRole(Role roleAdmin) {
+		// TODO Auto-generated method stub
+	}
+
+	public static long getSerialversionuid() {
+		return serialVersionUID;
+	}
+
+	public void setId(String id) {
+		this.id = id;
+	}
+
+	public void setPassword(String password) {
+		this.password = password;
+	}
+}  
 
       
     
